--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,20 @@ name = "tg-bot"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
-readme = "README.md"
-packages = [{include = "tg_bot"}]
+packages = [{include = "bot_core"}]
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.31.0"
 aiogram = "^2.25.1"
+poetry-dotenv-plugin = "^0.1.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+start="bot_core.telegram_bot:start_point"
